package roguelike;

message GameMessage {
  repeated CellMessage cells = 1;
  //repeated CreatureMessage creatures = 2;
  optional CreatureMessage player = 2;
}

message CellMessage {
  required sint32 x = 1;
  required sint32 y = 2;
  required string symbol = 3;
}

message CreatureMessage {
  required sint32 x = 1;
  required sint32 y = 2;
  required string symbol = 3;
}
